# Keks4eta-Hiver

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  Hiver_Documentation (Repaired).docx  Hiver_Documentation.docx  Hiver_Documentation_v2.docx  PROGRESS.md  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.claude/: README.md  settings.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/src/: __init__.py  main.py
backend/src/application/dtos/: auth_dtos.py  boost_dtos.py  dispute_dtos.py  favorite_dtos.py  message_dtos.py  notification_dtos.py  offer_dtos.py  payment_dtos.py  review_dtos.py  task_dtos.py  user_dtos.py
backend/src/application/services/: image_validation.py
backend/src/application/use_cases/auth/: login_use_case.py  oauth_login_use_case.py  refresh_token_use_case.py  register_use_case.py
backend/src/application/use_cases/boosts/: boost_use_cases.py
backend/src/application/use_cases/disputes/: dispute_use_cases.py
backend/src/application/use_cases/favorites/: favorite_use_cases.py
backend/src/application/use_cases/messages/: message_use_cases.py
backend/src/application/use_cases/notifications/: notification_use_cases.py
backend/src/application/use_cases/offers/: accept_offer_use_case.py  create_offer_use_case.py
backend/src/application/use_cases/payments/: get_escrow_use_case.py  release_escrow_use_case.py
backend/src/application/use_cases/reviews/: list_reviews_use_case.py  submit_review_use_case.py
backend/src/application/use_cases/tasks/: boost_task_use_case.py  complete_task_use_case.py  create_task_use_case.py  get_task_use_case.py  list_tasks_use_case.py  search_tasks_use_case.py  start_task_use_case.py  upload_task_image_use_case.py
backend/src/application/use_cases/users/: find_hivers_nearby_use_case.py  update_profile_use_case.py  upload_avatar_use_case.py
backend/src/domain/entities/: boost.py  dispute.py  favorite.py  message.py  notification.py  offer.py  review.py  task.py  transaction.py  user.py
backend/src/domain/errors/: domain_errors.py
backend/src/domain/interfaces/: ports.py  repositories.py
backend/src/domain/services/: event_bus.py  search_sort.py  task_factory.py
backend/src/domain/value_objects/: location.py  money.py  rating.py  work_radius.py
backend/src/infrastructure/database/: seed.py  session.py  transaction.py
backend/src/infrastructure/database/migrations/: env.py
backend/src/infrastructure/database/migrations/versions/: 001_create_extensions.py  002_create_users_table.py  003_create_clients_hivers.py  004_create_skills.py  005_create_tasks.py  006_create_offers.py  007_create_transactions.py  008_create_reviews.py  009_create_messages.py  010_create_disputes.py  011_create_boosts.py  012_create_notification_log.py  013_create_all_indexes.py  014_create_plpgsql_functions.py  015_create_views.py  016_add_oauth_to_users.py  017_enable_rls_and_secure_view.py  018_task_budget_range_check.py  019_backfill_dual_role_profiles.py  020_hiver_location_display.py  021_create_favorites.py  022_task_featured_until.py
backend/src/infrastructure/database/models/: __init__.py  boost_model.py  client_model.py  dispute_model.py  favorite_model.py  hiver_model.py  message_model.py  notification_log_model.py  offer_model.py  review_model.py  skill_model.py  task_model.py  transaction_model.py  user_model.py
backend/src/infrastructure/database/repositories/: boost_repository.py  dispute_repository.py  favorite_repository.py  message_repository.py  notification_repository.py  offer_repository.py  review_repository.py  task_repository.py  transaction_repository.py  user_repository.py
backend/src/infrastructure/geo/: worker.py
backend/src/infrastructure/http/: chat_hub.py  dependencies.py  oauth.py  rate_limit.py
backend/src/infrastructure/http/middleware/: error_handler.py
backend/src/infrastructure/http/routers/: __init__.py  auth.py  disputes.py  favorites.py  messages.py  notifications.py  offers.py  payments.py  tasks.py  users.py
backend/src/infrastructure/notifications/: in_app_adapter.py
backend/src/infrastructure/payments/: mock_payment_adapter.py  payment_factory.py  stripe_adapter.py
backend/src/infrastructure/storage/: storage_factory.py  supabase_storage_adapter.py
backend/src/shared/: config.py  container.py  logger.py  password.py  security.py
backend/src/shared/concurrency/: semaphore.py
backend/tests/: conftest.py
backend/tests/integration/: test_http_endpoints.py
backend/tests/unit/application/: test_additional_use_cases.py  test_auth_use_cases.py  test_boost_task_use_case.py  test_conversations_use_case.py  test_create_offer_use_case.py  test_favorites_use_cases.py  test_message_dispute_notification_use_cases.py  test_oauth_login_use_case.py  test_offer_use_cases.py  test_payment_review_use_cases.py  test_profile_use_cases.py  test_register_use_case.py  test_task_use_cases.py  test_upload_task_image_use_case.py
backend/tests/unit/domain/: test_domain_services.py  test_favorite.py  test_location.py  test_money.py  test_offer.py  test_rating.py  test_review.py  test_task.py  test_task_factory.py  test_transaction.py  test_user.py  test_work_radius.py
backend/tests/unit/infrastructure/: test_chat_hub.py
backend/tests/unit/shared/: test_security.py
docs/: 1.md  (+9 more)
(+113 files in other folders)
