[project]
name = "hiver-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.48.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.14.1",
    "email-validator>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "pwdlib[argon2,bcrypt]>=0.2.0",
    "authlib>=1.3.0",
    "itsdangerous>=2.2.0",
    "stripe>=15.2.0",
    "httpx>=0.27.0",
    "geoalchemy2>=0.15.0",
    "structlog>=24.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.30",
    "pillow>=10.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.15",
    "mypy>=1.13.0",
    "pip-audit>=2.7.0",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/infrastructure/database/models/*.py" = ["F821"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.File", "fastapi.Form", "fastapi.UploadFile"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
mypy_path = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=html --cov-report=xml --cov-fail-under=80"

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "**/__init__.py",
    "src/infrastructure/database/migrations/*",
    "src/infrastructure/database/seed.py",
    "src/infrastructure/database/models/*",
    "src/infrastructure/payments/stripe_adapter.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
